dark mode button bug resolve

--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ body {
 }
 
 .img-darkMode-btn{
-  width: 100%;
+  width: 50px;
   aspect-ratio: 1/1;
 }
 
